# smtu_projects

CM/: laba3.ipynb
KPS/: del.py  field.py  project1.ipynb  project2.ipynb  project3.ipynb
rust/exercises/100-exercises_threads-interiormutability/: Cargo.toml
rust/exercises/100-exercises_threads-interiormutability/src/: lib.rs
rust/exercises/rustlings_rc/src/: main.rs
rust/exercises/smart_pointers_box/src/: main.rs
rust/exercises/smart_pointers_rc/: Cargo.toml
rust/minigrep/src/: lib.rs  main.rs
rust/multi_threads/: Cargo.toml
rust/multi_threads/src/: main.rs
rust/multi_threads_v2/: Cargo.toml
rust/multi_threads_v2/examples/: extern_threads.rs
rust/multi_threads_v2/src/: lib.rs  main.rs
rust/proto_task/: Cargo.toml  addressbook.db  build.rs
rust/proto_task/src/: lib.rs  main.rs
rust/proto_task/src/proto/: addressbook.proto  adressbook.proto
rust/state/src/: lib.rs  lib2.rs
rust/video/: Cargo.toml  config.toml
rust/video/client/: Cargo.toml
rust/video/server/: Cargo.toml
rust/video/server/src/: main.rs
rust/video/shared/: Cargo.toml
rust/video/shared/src/: lib.rs
rust/web_server/: .gitignore  Dockerfile  docker-compose.yaml
rust/web_server/client/: Cargo.toml  build.rs
rust/web_server/client/src/: lib.rs  main.rs
rust/web_server/grafana/dashboards/: dashboard.json  dashboard.yaml
rust/web_server/grafana/datasources/: datasource.yml
rust/web_server/pages/: main.html
rust/web_server/server/: Cargo.toml
rust/web_server/server/src/: lib.rs  main.rs
rust/web_server/src/: main.rs  server.rs
(+1 files in other folders)
