[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
eframe = "^0.22"
egui = "^0.22"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
simple_logger = "^4.0"
image = "^0.24"

[[bin]]
name = "client"
path = "src/main.rs"  # Явно указываем путь к бинарному файлу